# wca_oauth

./: .rustfmt.toml  Cargo.toml  README.md
src/: event.rs  lib.rs  main.rs  me.rs
src/api_types/: EventEnum.rs  assignment.rs  assignment_code.rs  attempt_result.rs  avatar.rs  competition.rs  date.rs  date_time.rs  event.rs  mod.rs  person.rs  personal_best.rs  registration.rs  role.rs  round.rs  series.rs  wcif.rs
src/competition/: mod.rs
src/oauth/: base.rs  dob.rs  email.rs  manage_competitions.rs  mod.rs  public.rs  requests.rs  scope.rs  secret.rs  staging.rs  traits.rs
