[package]
name = "wca_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
chrono = { version = "0.4.23", features = ["serde", "std"], default-features = false }
reqwest = { version = "0.11.14", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
